# youtube-resume

./: .env  api.py  main.py  pyproject.toml  readme.md  test_main.py
static/: app.js  index.html  style.css
